# kg_llm

./: .gitignore  Dockerfile  Graph_for_group_test.html  README.md  from_pdf_lch.ipynb  gensim_test.ipynb  join_docx.py  make_Graph_doc.ipynb  pyproject.toml  requirements.txt  result_base_rag.json
banchmarks/base_rag/: result_base_rag.json  test_base_rag.csv
configs/: advanced_graph_rag_test.yaml  base_rag.yaml  base_rag_eval.yaml  base_rag_test.yaml  docx2graph_advanced_neo4j.yaml  docx2graph_html.yaml  docx2graph_init.yaml  docx2graph_llm_neo4j.yaml  docx2graph_neo4j.yaml  docx2graph_tfidf.yaml  rag_eval.yaml
configs/db/: chroma.yaml  faiss.yaml
configs/embedding2rag/: ada_v2.yaml  gigachat.yaml
configs/llm2eval/: gpt35_turbo.yaml
configs/llm2rag/: gigachat_lite_plus.yaml  gpt35_turbo.yaml
configs/neo4j/: base.yaml  kg_llm.yaml
configs/prompt/: base.yaml
configs/rag_pipeline/: base.yaml
configs/splitter/: RecursiveCharacterTextSplitter.yaml
data/input/: test.docx
db/: connection_neo4j.py
docx_parser/: document_parser.py  windows_font_mapping.py
docx_parser/data_structures/: base_props.py  paragraph.py  paragraph_info.py  run.py  table.py
docx_parser/extractors/: numbering_extractor.py  properties_extractor.py  styles_extractor.py
dozor/: usage_big.docx
evaluting/: base_rag_eval.py  rag_eval.py  run_eval.py  test_advanced_graph_rag.py  test_base_rag.py
examples/: docs2graph.py  docs2graph_html.py  docs2graph_llm.py  docs2graph_neo4j.py  docs2graph_neo4j_advanced.py  docs2graph_neo4j_method_2.py  graph_splitter_neo4j.py  graph_splitter_neo4j_base.py  graph_splitter_neo4j_structure.py  method_1.py
examples/rags/: base.py  graph_rag.py
notebooks/: base_retrive.ipynb  exp.ipynb  graph_rag_with_filtering.ipynb  naive_graph_rag.ipynb  run_retrive.ipynb  structure_splitter.ipynb  tf_idf_chunks.ipynb
web_ui/: README.md  app.py  pyproject.toml  requirements.txt
web_ui/assets/base/: dozor_dozor.docx  install_and_settings_skan_a.docx  install_dozor.docx  instruction_skan_a.docx  specific_skan_a.docx  usage_big_dozor.docx  usage_dozor.docx  гендальф.docx
web_ui/src/: utils.py
web_ui/src/rag_pipelines/: base_rag.py  graph_rag.py
web_ui/src/rag_selector/: base.py  constraints.txt  graph.py
web_ui/templates/: base.html  bot.html  index.html
(+35 files in other folders)
