[tool.poetry]
name = "kg-llm"
version = "0.1.0"
description = ""
authors = ["kodidi <koddinrus@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.2.1"
bs4 = "^0.0.2"
gensim = "^4.3.2"
scipy = "1.12.0"
pdfplumber = "^0.11.0"
nltk = "^3.8.1"
python-docx = "^1.1.0"
neo4j = "5.19.0"
langchain = "^0.1.14"
langchain-community = "^0.0.31"
langchain-openai = "^0.1.1"
langchain-experimental = "^0.0.56"
wikipedia = "^1.4.0"
tiktoken = "^0.6.0"
yfiles-jupyter-graphs = "^1.6.2"
pypdf = "^4.1.0"
docx2txt = "^0.8"
ragas = "^0.1.7"
langchain-mistralai = "^0.1.2"
gigachain = "^0.1.16"
chroma = "^0.2.0"
bleu = "^0.3"
hydra-core = "^1.3.2"
scikit-learn = "^1.4.2"
spacy = "^3.7.4"
wrapt = "^1.16.0"
flask = "^3.0.3"
flask-bootstrap = "^3.3.7.1"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
py2neo = "^2021.2.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
